Fixed small gap between scrollbar and page

--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -57,7 +57,7 @@ body {
 html {
     /* The browser is wostlikely a chromium based browser if it supports overlay */
     @supports (overflow-y: overlay) {
-        width: calc(100% - 6px);
+        // width: calc(100% - 6px);
         // scroll-behavior: smooth;
     }
 }
